<resources>
    <string name="app_name">Generic Bluetooth App</string>
    <string name="on">Turn Bluetooth ON</string>
    <string name="off">Turn Bluetooth OFF</string>
    <string name="start_service">Restart service</string>
    <string name="make_device_visible">Make device visible</string>
    <string name="pared_devices">Refresh Devices</string>
    <string name="close">close</string>
    <string name="device_not_discovering">Not Discoverable</string>
    <string name="device_discovering">Discoverable</string>
    <string name="page_monitoring">Monitor Connection</string>
    <string name="page_scan_devices">Scan for Devices</string>
    <string name="page_pared_devices">List Pared Devices</string>
    <string name="page_remote_control">Remote Control Page</string>
    <string name="no_bluetooth">Bluetooth is off.\nPlease, switch it on!</string>
    <string name="selected_device_">Device %s was selected!</string>
    <string name="remote_custom_command_hint">Enter custom command</string>
    <string name="remote_down_command_hint">Enter down command</string>
    <string name="remote_up_command_hint">Enter up command</string>
    <string name="remote_left_command_hint">Enter left command</string>
    <string name="remote_right_command_hint">Enter right command</string>
    <string name="remote_sent_command_hint">Last command sent</string>
    <string name="bluetooth_on">Bluetooth is on!</string>
    <string name="no_device_selected">There is no device selected</string>
    <string name="no_devices_found">There are no devices</string>
    <string name="click_to_scan_for_devices">Click to scan for devices</string>
    <string name="device_scanning_start">Device scanning started…</string>
    <string name="device_scanning_finished">Device scanning finished…</string>
    <string name="device_scanning_failed">Device scanning failed…</string>
    <string name="device_bound_changed">device bound changed!</string>
    <string name="device_bound_bonded">device bound bonded!</string>
    <string name="device_bound_bounding">device bound bonding!</string>
    <string name="device_bound_none">device bound none!</string>
    <string name="error_msg">"error: "</string>
    <string name="send_meg">"sent: "</string>
    <string name="received_msg">"received: "</string>
    <string name="deep_linking_label">Deep Linking</string>
    <string name="deep_linking_called_text">Called by Deep Link with:</string>
    <string name="starting_hint">Enter a maze field here</string>
    <string name="no_path_found">NO PATH FOUND!</string>
    <string name="find_the_shortest_path">Find the shortest path</string>
    <string name="not_valid_input">Not valid input</string>
</resources>